解决无法复制问题,更新菜单设置

--- a/package.json
+++ b/package.json
@@ -22,26 +22,11 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.2",
     "@electron-toolkit/utils": "^1.0.2",
+    "@milkdown/plugin-clipboard": "^6.4.1",
     "electron-updater": "^4.6.5"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
-    "@types/node": "16.11.22",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "@vitejs/plugin-react": "^2.1.0",
-    "electron-builder": "^22.14.13",
-    "electron-notarize": "^1.2.1",
-    "electron-vite": "^1.0.10",
-    "eslint": "^8.24.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.8",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4",
-    "vite": "^3.1.6",
     "@material-design-icons/font": "^0.12.1",
     "@milkdown/core": "^6.4.1",
     "@milkdown/plugin-history": "^6.4.1",
@@ -51,11 +36,27 @@
     "@milkdown/preset-commonmark": "^6.4.2",
     "@milkdown/react": "^6.4.1",
     "@milkdown/theme-nord": "^6.4.1",
+    "@types/node": "16.11.22",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "@vitejs/plugin-react": "^2.1.0",
     "electron": "^20.3.1",
+    "electron-builder": "^22.14.13",
+    "electron-notarize": "^1.2.1",
+    "electron-vite": "^1.0.10",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.8",
     "katex": "^0.16.2",
+    "prettier": "^2.7.1",
     "prism-themes": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "typescript": "^4.7.4",
+    "vite": "^3.1.6"
   }
 }
