--- a/.lh/src/renderer/src/App.tsx.json
+++ b/.lh/src/renderer/src/App.tsx.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 50,
+            "activePatchIndex": 53,
             "patches": [
                 {
                     "date": 1665388416110,
@@ -208,6 +208,18 @@
                 {
                     "date": 1665643274911,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -9,9 +9,9 @@\n     <div className=\"container\">\n       <Header />\n       <main>\n         <SideBar />\n-        {/* <MilkdownEditor></MilkdownEditor> */}\n+        <MilkdownEditor></MilkdownEditor>\n \n       </main>\n     </div>\n   )\n"
+                },
+                {
+                    "date": 1665648921364,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,18 +1,19 @@\n \n import { MilkdownEditor } from './components/Editor'\n import { Header } from './components/Header'\n import { SideBar } from './components/SideBar'\n+import { M } from './E'\n \n export const App = () => {\n \n   return (\n     <div className=\"container\">\n       <Header />\n       <main>\n         <SideBar />\n-        <MilkdownEditor></MilkdownEditor>\n-\n+        {/* <MilkdownEditor></MilkdownEditor> */}\n+<M/>\n       </main>\n     </div>\n   )\n }\n"
+                },
+                {
+                    "date": 1665648947680,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -7,13 +7,14 @@\n export const App = () => {\n \n   return (\n     <div className=\"container\">\n-      <Header />\n+      {/* <Header />\n       <main>\n         <SideBar />\n-        {/* <MilkdownEditor></MilkdownEditor> */}\n+        <MilkdownEditor></MilkdownEditor>\n+      </main> */}\n <M/>\n-      </main>\n+\n     </div>\n   )\n }\n"
+                },
+                {
+                    "date": 1665653186694,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,20 +1,18 @@\n \n import { MilkdownEditor } from './components/Editor'\n import { Header } from './components/Header'\n import { SideBar } from './components/SideBar'\n-import { M } from './E'\n \n export const App = () => {\n \n   return (\n     <div className=\"container\">\n-      {/* <Header />\n+      <Header />\n       <main>\n         <SideBar />\n         <MilkdownEditor></MilkdownEditor>\n-      </main> */}\n-<M/>\n+      </main>\n \n     </div>\n   )\n }\n"
                 }
             ],
             "date": 1665388416110,
