--- a/.lh/src/renderer/src/App.tsx.json
+++ b/.lh/src/renderer/src/App.tsx.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 53,
+            "activePatchIndex": 56,
             "patches": [
                 {
                     "date": 1665388416110,
@@ -220,6 +220,18 @@
                 {
                     "date": 1665653186694,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,20 +1,18 @@\n \n import { MilkdownEditor } from './components/Editor'\n import { Header } from './components/Header'\n import { SideBar } from './components/SideBar'\n-import { M } from './E'\n \n export const App = () => {\n \n   return (\n     <div className=\"container\">\n-      {/* <Header />\n+      <Header />\n       <main>\n         <SideBar />\n         <MilkdownEditor></MilkdownEditor>\n-      </main> */}\n-<M/>\n+      </main>\n \n     </div>\n   )\n }\n"
+                },
+                {
+                    "date": 1665669828273,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -8,10 +8,10 @@\n   return (\n     <div className=\"container\">\n       <Header />\n       <main>\n-        <SideBar />\n-        <MilkdownEditor></MilkdownEditor>\n+        {/* <SideBar />\n+        <MilkdownEditor></MilkdownEditor> */}\n       </main>\n \n     </div>\n   )\n"
+                },
+                {
+                    "date": 1665669849178,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -8,10 +8,10 @@\n   return (\n     <div className=\"container\">\n       <Header />\n       <main>\n-        {/* <SideBar />\n-        <MilkdownEditor></MilkdownEditor> */}\n+        <SideBar />\n+        {/* <MilkdownEditor></MilkdownEditor> */}\n       </main>\n \n     </div>\n   )\n"
+                },
+                {
+                    "date": 1665669994873,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -9,9 +9,9 @@\n     <div className=\"container\">\n       <Header />\n       <main>\n         <SideBar />\n-        {/* <MilkdownEditor></MilkdownEditor> */}\n+        <MilkdownEditor></MilkdownEditor>\n       </main>\n \n     </div>\n   )\n"
                 }
             ],
             "date": 1665388416110,
