--- a/.lh/src/renderer/src/App.tsx.json
+++ b/.lh/src/renderer/src/App.tsx.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 56,
+            "activePatchIndex": 58,
             "patches": [
                 {
                     "date": 1665388416110,
@@ -232,6 +232,14 @@
                 {
                     "date": 1665669994873,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -9,9 +9,9 @@\n     <div className=\"container\">\n       <Header />\n       <main>\n         <SideBar />\n-        {/* <MilkdownEditor></MilkdownEditor> */}\n+        <MilkdownEditor></MilkdownEditor>\n       </main>\n \n     </div>\n   )\n"
+                },
+                {
+                    "date": 1665674499452,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,7 +1,8 @@\n \n import { MilkdownEditor } from './components/Editor'\n import { Header } from './components/Header'\n+import { Search } from './components/Search'\n import { SideBar } from './components/SideBar'\n \n export const App = () => {\n \n@@ -11,8 +12,8 @@\n       <main>\n         <SideBar />\n         <MilkdownEditor></MilkdownEditor>\n       </main>\n-\n+      <Search/>\n     </div>\n   )\n }\n"
+                },
+                {
+                    "date": 1665674676485,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,19 +1,17 @@\n-\n import { MilkdownEditor } from './components/Editor'\n import { Header } from './components/Header'\n import { Search } from './components/Search'\n import { SideBar } from './components/SideBar'\n \n export const App = () => {\n-\n   return (\n     <div className=\"container\">\n       <Header />\n       <main>\n         <SideBar />\n         <MilkdownEditor></MilkdownEditor>\n       </main>\n-      <Search/>\n+      <Search />\n     </div>\n   )\n }\n"
                 }
             ],
             "date": 1665388416110,
