--- a/.lh/tsconfig.node.json.json
+++ b/.lh/tsconfig.node.json.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 8,
+            "activePatchIndex": 13,
             "patches": [
                 {
                     "date": 1665645394131,
@@ -40,6 +40,26 @@
                 {
                     "date": 1665645909836,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,7 +1,7 @@\n {\n   \"extends\": \"@electron-toolkit/tsconfig/tsconfig.node.json\",\n-  \"include\": [\"electron.vite.config.*\", \"src/main/*\", \"src/preload/*\", \"src/main/hooks/useMenu.ts\",\"src/main/hooks/*\"],\n+  \"include\": [\"electron.vite.config.*\", \"src/main/*\", \"src/preload/*\", \"src/main/hooks/*\"],\n   \"compilerOptions\": {\n     \"composite\": true\n   }\n }\n"
+                },
+                {
+                    "date": 1665737255185,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,7 +1,7 @@\n {\n   \"extends\": \"@electron-toolkit/tsconfig/tsconfig.node.json\",\n-  \"include\": [\"electron.vite.config.*\", \"src/main/*\", \"src/preload/*\", \"src/main/hooks/*\"],\n+  \"include\": [\"electron.vite.config.*\", \"src/main/*\", \"src/preload/*\", \"src/main/**/*.ts\"],\n   \"compilerOptions\": {\n     \"composite\": true\n   }\n }\n"
+                },
+                {
+                    "date": 1665737508893,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,7 +1,7 @@\n {\n   \"extends\": \"@electron-toolkit/tsconfig/tsconfig.node.json\",\n-  \"include\": [\"electron.vite.config.*\", \"src/main/*\", \"src/preload/*\", \"src/main/**/*.ts\"],\n+  \"include\": [\"electron.vite.config.*\", \"src/main/*\", \"src/preload/*\", \"src/main/**/*.ts\", \"src/main/electron/useMenu.ts\"],\n   \"compilerOptions\": {\n     \"composite\": true\n   }\n }\n"
+                },
+                {
+                    "date": 1665737550186,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,7 +1,7 @@\n {\n   \"extends\": \"@electron-toolkit/tsconfig/tsconfig.node.json\",\n-  \"include\": [\"electron.vite.config.*\", \"src/main/*\", \"src/preload/*\", \"src/main/**/*.ts\", \"src/main/electron/useMenu.ts\"],\n+  \"include\": [\"electron.vite.config.*\", \"src/main/*\", \"src/main/**/*.ts\",\"src/preload/*\", \"src/main/**/*.ts\", \"src/main/electron/useMenu.ts\"],\n   \"compilerOptions\": {\n     \"composite\": true\n   }\n }\n"
+                },
+                {
+                    "date": 1665737584672,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,7 +1,7 @@\n {\n   \"extends\": \"@electron-toolkit/tsconfig/tsconfig.node.json\",\n-  \"include\": [\"electron.vite.config.*\", \"src/main/*\", \"src/main/**/*.ts\",\"src/preload/*\", \"src/main/**/*.ts\", \"src/main/electron/useMenu.ts\"],\n+  \"include\": [\"electron.vite.config.*\", \"src/main/*\", \"src/main/**/*.ts\",\"src/preload/*\", \"src/main/**/*.ts\", \"src/main/electron/*/ts\"],\n   \"compilerOptions\": {\n     \"composite\": true\n   }\n }\n"
+                },
+                {
+                    "date": 1665737648273,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,7 +1,7 @@\n {\n   \"extends\": \"@electron-toolkit/tsconfig/tsconfig.node.json\",\n-  \"include\": [\"electron.vite.config.*\", \"src/main/*\", \"src/main/**/*.ts\",\"src/preload/*\", \"src/main/**/*.ts\", \"src/main/electron/*/ts\"],\n+  \"include\": [\"electron.vite.config.*\", \"src/main/*\",\"src/preload/*\", \"src/main/**/*.ts\", \"src/main/electron/*/ts\"],\n   \"compilerOptions\": {\n     \"composite\": true\n   }\n }\n"
                 }
             ],
             "date": 1665645394131,
