--- a/.lh/tsconfig.node.json.json
+++ b/.lh/tsconfig.node.json.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 13,
+            "activePatchIndex": 14,
             "patches": [
                 {
                     "date": 1665645394131,
@@ -60,6 +60,10 @@
                 {
                     "date": 1665737648273,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,7 +1,7 @@\n {\n   \"extends\": \"@electron-toolkit/tsconfig/tsconfig.node.json\",\n-  \"include\": [\"electron.vite.config.*\", \"src/main/*\", \"src/main/**/*.ts\",\"src/preload/*\", \"src/main/**/*.ts\", \"src/main/electron/*/ts\"],\n+  \"include\": [\"electron.vite.config.*\", \"src/main/*\",\"src/preload/*\", \"src/main/**/*.ts\", \"src/main/electron/*/ts\"],\n   \"compilerOptions\": {\n     \"composite\": true\n   }\n }\n"
+                },
+                {
+                    "date": 1665758588954,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,7 +1,7 @@\n {\n   \"extends\": \"@electron-toolkit/tsconfig/tsconfig.node.json\",\n-  \"include\": [\"electron.vite.config.*\", \"src/main/*\",\"src/preload/*\", \"src/main/**/*.ts\", \"src/main/electron/*/ts\"],\n+  \"include\": [\"electron.vite.config.*\", \"src/main/*\",\"src/preload/*\", \"src/main/**/*.ts\", \"src/main/electron/*/ts\",\"src/main/node/*.ts\"],\n   \"compilerOptions\": {\n     \"composite\": true\n   }\n }\n"
                 }
             ],
             "date": 1665645394131,
