--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,6 +1,6 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.node.json",
-  "include": ["electron.vite.config.*", "src/main/*","src/preload/*", "src/main/**/*.ts", "src/main/electron/*/ts"],
+  "include": ["electron.vite.config.*", "src/main/*","src/preload/*", "src/main/**/*.ts", "src/main/electron/*/ts","src/main/node/*.ts"],
   "compilerOptions": {
     "composite": true
   }
