--- a/.lh/src/renderer/src/components/Editor/hooks/useConfig.ts.json
+++ b/.lh/src/renderer/src/components/Editor/hooks/useConfig.ts.json
@@ -3,11 +3,23 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 0,
+            "activePatchIndex": 3,
             "patches": [
                 {
                     "date": 1665632485404,
                     "content": "Index: \n===================================================================\n--- \n+++ \n"
+                },
+                {
+                    "date": 1665765056232,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,8 +1,8 @@\n-import { Ctx, Editor } from \"@milkdown/core\";\n-import { listenerCtx } from \"@milkdown/plugin-listener\";\n-\n-export const conifgEdirot = (ctx:Ctx) => {\n-    ctx.get(listenerCtx).markdownUpdated((ctx, markdown, prevMarkdown) => {\n-        console.log(markdown)\n-      })\n-}\n\\ No newline at end of file\n+import { Ctx, defaultValueCtx } from '@milkdown/core'\n+import { listenerCtx } from '@milkdown/plugin-listener'\n+export const useConfig = (ctx: Ctx) => {\n+  // ctx.set(defaultValueCtx, DEFAULT_MARKDOWN)\n+  ctx.get(listenerCtx).markdownUpdated((ctx, markdown, prevMarkdown) => {\n+    // console.log(ctx)\n+  })\n+}\n"
+                },
+                {
+                    "date": 1665765062219,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,8 +1,8 @@\n import { Ctx, defaultValueCtx } from '@milkdown/core'\n import { listenerCtx } from '@milkdown/plugin-listener'\n export const useConfig = (ctx: Ctx) => {\n-  // ctx.set(defaultValueCtx, DEFAULT_MARKDOWN)\n-  ctx.get(listenerCtx).markdownUpdated((ctx, markdown, prevMarkdown) => {\n-    // console.log(ctx)\n-  })\n+  // // ctx.set(defaultValueCtx, DEFAULT_MARKDOWN)\n+  // ctx.get(listenerCtx).markdownUpdated((ctx, markdown, prevMarkdown) => {\n+  //   // console.log(ctx)\n+  // })\n }\n"
+                },
+                {
+                    "date": 1665765087112,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,6 +1,6 @@\n-import { Ctx, defaultValueCtx } from '@milkdown/core'\n-import { listenerCtx } from '@milkdown/plugin-listener'\n+// import { Ctx, defaultValueCtx } from '@milkdown/core'\n+// import { listenerCtx } from '@milkdown/plugin-listener'\n export const useConfig = (ctx: Ctx) => {\n   // // ctx.set(defaultValueCtx, DEFAULT_MARKDOWN)\n   // ctx.get(listenerCtx).markdownUpdated((ctx, markdown, prevMarkdown) => {\n   //   // console.log(ctx)\n"
                 }
             ],
             "date": 1665632485404,
