--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@electron-toolkit/preload": "^1.0.2",
     "@electron-toolkit/utils": "^1.0.2",
     "@milkdown/plugin-clipboard": "^6.4.1",
+    "@milkdown/plugin-indent": "^6.5.0",
+    "@milkdown/preset-gfm": "^6.5.0",
     "electron-updater": "^4.6.5"
   },
   "devDependencies": {
